--- a/Code/templates/index.html
+++ b/Code/templates/index.html
@@ -1,27 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Mars news</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Costa Rica Weather</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-</head>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-<body>
-  <div class="container-fluid">
-    <div class="jumbotron text-center">
-      <h1>Visit the...</h1>
-      <p>Beach. Rainforest. Volcano. Tree House. Sloths.</p>
-      <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Get Data!</a></p>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  </head>
+
+  <body>
+    <nav class="navbar navbar-dark bg-dark size_hide">
+      <a href="/"
+        ><span class="navbar-brand mb-0 h1 back_color">NEWS FROM MARS</span></a>
+
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a class="nav-link active" href="/images">Mars Images</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="container-fluid">
+      <div class="jumbotron text-center">
+        <h1>Mission to Mars</h1>
+        <p>
+          This page gets data from different sources using
+          <b>BeautifulSoup and spliter (Python libraries).</b>
+        </p>
+        <p>
+          The result is showing below using <b>Flask (Python library)</b> that
+          retrieve data from <b>MongoDB.</b>
+        </p>
+        <p>
+          <a class="btn btn-primary btn-lg" href="/scrape" role="button"
+            >Push here to get new from Mars</a
+          >
+        </p>
+      </div>
+      <div class="row">
+        <div class="col-lg-8">
+          <h1>Lastest Mars News</h1>
+         <p><em>{{ listings.news_time }}</em></p>
+          <h3>
+            {{ listings.news_title }}
+          </h3>
+        </h4>
+            {{ listings.news_parag }}
+        </h4>
+        
+        </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-8">
+          </br>
+            <h3>
+              Featured Mars Image
+            </h3>
+            <img width="800px" height="500px" class="img-fluid" src={{listings.new_image_url}}>
+          </div>
+          <div class="col-lg-4">
+              <div class="card">
+                  <div class="card-body">
+                    <b>Current Weather on Mars</b>
+                    </p><em>{{listings.twitter_time}}</em></p>
+                    <p>
+                        {{listings.twitter_messag}}
+                    </p>
+                  </div>
+                </div>
+                  <br>
+                  <table border="1" >
+                      <thead>
+                        <tr style="text-align: center;">
+                          <th></th>
+                          <th>values</th>
+                        </tr>
+                        <tr>
+                          <th>description</th>
+                          <th></th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th>Equatorial Diameter:</th>
+                          <td>6,792 km</td>
+                        </tr>
+                        <tr>
+                          <th>Polar Diameter:</th>
+                          <td>6,752 km</td>
+                        </tr>
+                        <tr>
+                          <th>Mass:</th>
+                          <td>6.39 × 10^23 kg (0.11 Earths)</td>
+                        </tr>
+                        <tr>
+                          <th>Moons:</th>
+                          <td>2 (Phobos &amp; Deimos)</td>
+                        </tr>
+                        <tr>
+                          <th>Orbit Distance:</th>
+                          <td>227,943,824 km (1.38 AU)</td>
+                        </tr>
+                        <tr>
+                          <th>Orbit Period:</th>
+                          <td>687 days (1.9 years)</td>
+                        </tr>
+                        <tr>
+                          <th>Surface Temperature:</th>
+                          <td>-87 to -5 °C</td>
+                        </tr>
+                        <tr>
+                          <th>First Record:</th>
+                          <td>2nd millennium BC</td>
+                        </tr>
+                        <tr>
+                          <th>Recorded By:</th>
+                          <td>Egyptian astronomers</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                
+          </div>
+
+
     </div>
-    <img src="{{ vacation.sloth_img }}" alt="Sloth">
-    <h2>The typical weather in Costa Rica is:</h2>
-    <h3>Max Temp: {{ vacation.max_temp }}</h3>
-    <h3>Min Temp: {{ vacation.min_temp }}</h3>
-  </div>
-  </div>
-</body>
-
+  </body>
 </html>
