--- a/Code/templates/pages/images.html
+++ b/Code/templates/pages/images.html
@@ -32,72 +32,75 @@
         </li>
       </ul>
     </nav>
-    <br>
+    <br />
     <div class="container-fluid">
       <div class="row">
-      <div class="col-lg-4">
-      </div>
-      <div class="col-lg-4">
-      <h3 align="center"> Mars Hemispheres</h3>
-      <br>
-      <div id="demo" class="carousel slide" data-ride="carousel">
-        <ul class="carousel-indicators">
-          <li data-target="#demo" data-slide-to="0" class="active"></li>
-          <li data-target="#demo" data-slide-to="1"></li>
-          <li data-target="#demo" data-slide-to="2"></li>
-          <li data-target="#demo" data-slide-to="3"></li>
-        </ul>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="{{ listings.urls_mars[0]['img_url'] }}"
-              alt="slide1"
-              width="500" height="500"
-            />
-            <div class="carousel-caption">
-              <h3>{{ listings.urls_mars[0]['title'] }}</h3>
+        <div class="col-lg-4"></div>
+        <div class="col-lg-4">
+          <h3 align="center">Mars Hemispheres</h3>
+          <br />
+          <div id="demo" class="carousel slide" data-ride="carousel">
+            <ul class="carousel-indicators">
+              <li data-target="#demo" data-slide-to="0" class="active"></li>
+              <li data-target="#demo" data-slide-to="1"></li>
+              <li data-target="#demo" data-slide-to="2"></li>
+              <li data-target="#demo" data-slide-to="3"></li>
+            </ul>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="{{ listings.urls_mars[0]['img_url'] }}"
+                  alt="slide1"
+                  width="500"
+                  height="500"
+                />
+                <div class="carousel-caption">
+                  <h3>{{ listings.urls_mars[0]["title"] }}</h3>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="{{ listings.urls_mars[1]['img_url'] }}"
+                  alt="slide2"
+                  width="500"
+                  height="500"
+                />
+                <div class="carousel-caption">
+                  <h3>{{ listings.urls_mars[1]["title"] }}</h3>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="{{ listings.urls_mars[2]['img_url'] }}"
+                  alt="slide3"
+                  width="500"
+                  height="500"
+                />
+                <div class="carousel-caption">
+                  <h3>{{ listings.urls_mars[2]["title"] }}</h3>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="{{ listings.urls_mars[3]['img_url'] }}"
+                  alt="slide4"
+                  width="500"
+                  height="500"
+                />
+                <div class="carousel-caption">
+                  <h3>{{ listings.urls_mars[3]["title"] }}</h3>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="{{ listings.urls_mars[1]['img_url'] }}"
-              alt="slide2"
-              width="500" height="500"
-            />
-            <div class="carousel-caption">
-              <h3>{{ listings.urls_mars[1]['title'] }}</h3>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="{{ listings.urls_mars[2]['img_url'] }}"
-              alt="slide3"
-              width="500" height="500"
-            />
-            <div class="carousel-caption">
-              <h3>{{ listings.urls_mars[2]['title'] }}/h3>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="{{ listings.urls_mars[3]['img_url'] }}"
-              alt="slide4"
-              width="500" height="500"
-            />
-            <div class="carousel-caption">
-              <h3>{{ listings.urls_mars[3]['title'] }}</h3>
-            </div>
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+              <span class="carousel-control-next-icon"></span>
+            </a>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#demo" data-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#demo" data-slide="next">
-          <span class="carousel-control-next-icon"></span>
-        </a>
       </div>
-    </div>
-    </div>
     </div>
   </body>
 </html>
