including flask app files and html

--- a/Code/templates/index.html
+++ b/Code/templates/index.html
@@ -42,7 +42,7 @@
         </p>
         <p>
           <a class="btn btn-primary btn-lg" href="/scrape" role="button"
-            >Push here to get new from Mars</a
+            >Push here to get news from Mars</a
           >
         </p>
       </div>
